packages/jsii/test/negatives/neg.enum-name.2.ts
///!MATCH_ERROR: Type names cannot use an underscore: My_Enum

export enum My_Enum {
    Foo,
    Goo
}
